--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ body {
     background-color: navy;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: pink;
 }
