--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: navy;
+    background-color: blue;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     color: pink;
