--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,6 @@ body {
     margin: 0;
     background-color: blue;
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
-    color: pink;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
