--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
-    background-color: blue;
+    background-color: black;
     text-align: left;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'arial', sans-serif;
     color: white;
 }
